implementado tradução do IF